Fix text align on account wrapper

--- a/less/bootstrap-theme/forms.less
+++ b/less/bootstrap-theme/forms.less
@@ -314,7 +314,8 @@ select {
 }
 
 .has-error {
-    select {
+    > select,
+    > div > select {
         &.form-control {
             .box-shadow(none);
 
