--- a/less/bootstrap-theme/input-groups.less
+++ b/less/bootstrap-theme/input-groups.less
@@ -123,7 +123,7 @@ div[class*="col-"] {
 }
 
 .has-error {
-    .input-group {
+    > .input-group {
         &.bootstrap-filestyle {
             input,
             textarea {
