--- a/less/gluon/account.less
+++ b/less/gluon/account.less
@@ -24,6 +24,7 @@
 
 .account-wrapper {
     margin-top: 50px;
+    text-align: left;
 
     .logo-wrapper {
         padding-bottom: 41px;
@@ -58,5 +59,11 @@
         padding: 10px 0;
         display: block;
         width: 100%;
+    }
+
+    .text-muted {
+        text-align: left;
+        font-size: floor(@font-size-base * 0.9);
+        color: lighten(@gray-light, 20%);
     }
 }
