--- a/less/select2-bootstrap-theme/select2-bootstrap-theme-core.less
+++ b/less/select2-bootstrap-theme/select2-bootstrap-theme-core.less
@@ -206,7 +206,7 @@ select {
 }
 
 .has-error {
-    .select2-container--default {
+    > .select2-container--default {
         .select2-selection {
             border-bottom-color: @state-danger-border;
         }
@@ -219,8 +219,8 @@ select {
         }
     }
 
-    .select2-container--focus,
-    .select2-container--open {
+    > .select2-container--focus,
+    > .select2-container--open {
         .select2-selection {
             .box-shadow(none);
         }
